gcc/testsuite/gcc.dg/pr22458-1.c
/* { dg-error "(parse|syntax) error" "" { target *-*-* } 0 } */
void foo()
{
     __PRETTY_FUNCTION__;
